ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-service
                port:
                  number: 3000
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-bus-service
                port:
                  number: 5000
